fix contacts links overflow

--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -136,4 +136,7 @@
     .Line{
         fill:var(--main-mobile-color);
     }
+    .Contacts a {
+        font-size: 1rem;
+    }
 }
